# 2050

./: .gitignore  .gitmodules  LICENSE  PRIVACY.md  README.md  build.gradle  gradle.properties  textogl-config-version.cmake.in  textogl-config.cmake.in  textogl.pc.in
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/org/mattvchandler/a2050/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 2050.frag  2050.vert
app/src/main/cpp/: ball.cpp  ball.hpp  color.cpp  color.hpp  engine.cpp  engine.hpp  jni.cpp  jni.hpp  log.hpp  native-lib.cpp  opengl.cpp  opengl.hpp  world.cpp  world.hpp
app/src/main/java/: About_dialog.kt  MainActivity.kt  Settings.kt  Themed_activity.kt
app/src/main/java/org/mattvchandler/a2050/: MainActivity.java  MainActivity.kt  Settings.java  Settings.kt  Themed_activity.java  Themed_activity.kt
app/src/main/res/drawable/: achievement_ball.xml  achievement_bkg.xml  ic_arrow.xml  ic_fullscreen.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_pause.xml  ic_plumb_bob.xml  plumb_bob.xml  plumb_bob_bg.xml
app/src/main/res/layout/: about_dialog.xml  achievement_popup.xml  activity_main.xml  activity_settings.xml  toolbar.xml
app/src/main/res/layout-land/: about_dialog.xml  activity_main.xml
app/src/main/res/menu/: activity_main_action_bar.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: bools.xml  colors.xml  dimens.xml  strings.xml  styles.xml  values.xml
app/src/main/res/values-de/: strings.xml  values.xml
app/src/main/res/values-de-v21/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-es-v21/: strings.xml
app/src/main/res/values-id/: strings.xml
app/src/main/res/values-id-v21/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-in-v21/: strings.xml
app/src/main/res/values-night/: bools.xml  colors.xml
app/src/main/res/values-v21/: strings.xml  values.xml
app/src/main/res/values-v23/: styles.xml
app/src/main/res/xml/: backup_descriptor.xml  data_extraction_rules.xml  settings.xml
app/src/test/java/org/mattvchandler/a2050/: ExampleUnitTest.java
demo/: demo.cpp
gradle/wrapper/: gradle-wrapper.properties
include/textogl/: font.hpp  static_text.hpp
libraries/textogl/: CMakeLists.txt  LICENSE  README.md
libraries/textogl/demo/: demo.cpp
libraries/textogl/include/textogl/: font.hpp  static_text.hpp  types.hpp
libraries/textogl/src/: CMakeLists.txt  font.cpp  font_impl.hpp
libraries/textogl/src/shaders/: font.gles20.frag  shaders.inl.in
metadata/en-US/: full_description.txt  short_description.txt
metadata/en-US/changelogs/: 190010005  190010008  190010009  190010010
metadata/id/: full_description.txt  short_description.txt
src/: font.cpp  font_common.cpp  font_impl.hpp  static_text.cpp
src/shaders/: font.gl33.frag  font.gl33.vert  font.gles20.frag  font.gles20.vert  shaders.inl.in
textogl/: CMakeLists.txt  Doxyfile.in
textogl/demo/: CMakeLists.txt
textogl/include/textogl/: font.hpp
textogl/src/: font.cpp  font_common.cpp  font_impl.hpp  static_text.cpp
textogl/src/shaders/: font.gl33.vert  font.gles20.vert
